--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>expense-manager</name>
 	<description>Expense Manager backend application</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>8</java.version>
 		<spring-cloud-azure.version>4.1.0</spring-cloud-azure.version>
 	</properties>
 	<dependencies>
@@ -22,6 +22,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
