--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Specify the DNS URI of your Azure Cosmos DB.
+spring.cloud.azure.cosmos.endpoint=${COSMOS_DB_ENDPOINT}
 
+# Specify the access key for your database.
+spring.cloud.azure.cosmos.key=${COSMOS_DB_KEY}
+
+# Specify the name of your database.
+spring.cloud.azure.cosmos.database=azurecosmosemulator
+spring.cloud.azure.cosmos.populate-query-metrics=true
